objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Alert__c</fullName>
        <description>If empty the products are free to select</description>
        <label>Alert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowedCountries__c</fullName>
        <description>Product allowed countries</description>
        <label>Allowed Countries</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGCPharmaceuticalsId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Pharmaceuticals</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Pharmaceuticals</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Product)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Products (BGC Pharmaceuticals)</relationshipLabel>
        <relationshipName>ProductPharmaceuticals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGClassification__c</fullName>
        <description>A concatenation of all nine Business Group Classification fields.</description>
        <formula>BgcCoatingsId__r.Name &amp; &quot; &quot; &amp; BgcFoodId__r.Name &amp; &quot; &quot; &amp; BgcHomeCareId__r.Name &amp; &quot; &quot; &amp; BgcLubricantsId__r.Name &amp; &quot; &quot; &amp; BgcOtherId__r.Name &amp; &quot; &quot; &amp; BgcPersonalCareId__r.Name &amp; &quot; &quot; &amp; BGCPharmaceuticalsId__r.Name &amp; &quot; &quot; &amp; BgcPlasticsId__r.Name &amp; &quot; &quot; &amp; BgcSynthesisId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BG Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BgcCoatingsId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Coatings &amp; Construction</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Product)</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Coatings &amp; Construction</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Products (BGC Coatings &amp; Construction)</relationshipLabel>
        <relationshipName>BGCCoatings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcFoodId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Food</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Product)</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Food</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Products (BGC Food)</relationshipLabel>
        <relationshipName>BGCFood</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcHomeCareId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Home Care and I&amp;I</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Home Care and I&amp;I</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Product)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Products (Home Care)</relationshipLabel>
        <relationshipName>BGCProductHomeCare</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcLubricantsId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Lubricants</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Lubricants</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Product)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Products (BGC Lubricants)</relationshipLabel>
        <relationshipName>BGCLubricants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcOtherId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>JEBU/SF/220518/Visibility filter is made optional (reached 10 visibility rules)</description>
        <label>BGC Other</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Product)</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Other Specialties</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Products (BGC Other)</relationshipLabel>
        <relationshipName>BGCOther</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcPersonalCareId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Personal Care</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Product)</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Personal Care</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Products (BGC Personal Care)</relationshipLabel>
        <relationshipName>BGCPersonalCare</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcPlasticsId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Advanced Materials</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Product)</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Advanced Materials</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Products (BGC Plastics)</relationshipLabel>
        <relationshipName>BGCPlastics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcSynthesisId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Synthesis</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Synthesis</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Product)</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Products (BGC Synthesis)</relationshipLabel>
        <relationshipName>BGCSynthesis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CASNumber__c</fullName>
        <description>Product CAS number</description>
        <label>CAS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanCreateCP__c</fullName>
        <description>Indicates product status that can create a contracted price</description>
        <formula>ISPICKVAL(ItemStatus__c, &apos;04.Active Sales&apos;)||
ISPICKVAL(ItemStatus__c, &apos;05.Phase Out&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CanCreateCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CentralSampleStore__c</fullName>
        <label>Central Sample Store</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SampleStores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Product comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommodityCode__c</fullName>
        <description>Product commodity code</description>
        <label>Commodity Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanySampleStore__c</fullName>
        <label>Company Sample Store</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConversionFactor__c</fullName>
        <description>Product conversion factor between UOMs</description>
        <label>Conversion Factor</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountryofOrigin__c</fullName>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinalCountries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FullSegmentsNumber__c</fullName>
        <description>Product full segments number</description>
        <externalId>true</externalId>
        <label>Full Segments Number</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GroupFlag__c</fullName>
        <description>Defines whether this is a Group product. A company number is a string of 5 digits. Formula checks for two aspects of the FullSegmentsNumber to tell it&apos;s Group or Local.</description>
        <formula>NOT (
   AND (
			   	CONTAINS ( FullSegmentsNumber__c , &apos;__&apos;)
				   , ( LEN ( FullSegmentsNumber__c ) - FIND ( &apos;__&apos; , FullSegmentsNumber__c ) ) = 6
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defines whether this is a Group product</inlineHelpText>
        <label>Group Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegrationId__c</fullName>
        <externalId>true</externalId>
        <label>Integration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemStatus__c</fullName>
        <description>Product item status</description>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>03.Active Pre Sales</fullName>
                    <label>Active Pre Sales</label>
                </value>
                <value>
                    <fullName>04.Active Sales</fullName>
                    <label>Active Sales</label>
                </value>
                <value>
                    <fullName>06.Inactive</fullName>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>01.New</fullName>
                    <label>New</label>
                </value>
                <value>
                    <fullName>07.Obsolete</fullName>
                    <label>Obsolete</label>
                </value>
                <value>
                    <fullName>05.Phase Out</fullName>
                    <label>Phase out</label>
                </value>
                <value>
                    <fullName>02.Temp Pre Sales</fullName>
                    <default>true</default>
                    <label>Temp Pre Sales</label>
                </value>
                <value>
                    <fullName>99.Rejected Temp</fullName>
                    <label>Rejected Temp</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <isActive>false</isActive>
                    <label>10</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <isActive>false</isActive>
                    <label>100</label>
                </value>
                <value>
                    <fullName>101</fullName>
                    <isActive>false</isActive>
                    <label>101</label>
                </value>
                <value>
                    <fullName>102</fullName>
                    <isActive>false</isActive>
                    <label>102</label>
                </value>
                <value>
                    <fullName>103</fullName>
                    <isActive>false</isActive>
                    <label>103</label>
                </value>
                <value>
                    <fullName>104</fullName>
                    <isActive>false</isActive>
                    <label>104</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <isActive>false</isActive>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <isActive>false</isActive>
                    <label>12</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <isActive>false</isActive>
                    <label>13</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <isActive>false</isActive>
                    <label>14</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <isActive>false</isActive>
                    <label>15</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <isActive>false</isActive>
                    <label>16</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <isActive>false</isActive>
                    <label>17</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <isActive>false</isActive>
                    <label>18</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <isActive>false</isActive>
                    <label>19</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <isActive>false</isActive>
                    <label>20</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <isActive>false</isActive>
                    <label>21</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <isActive>false</isActive>
                    <label>22</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <isActive>false</isActive>
                    <label>23</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <isActive>false</isActive>
                    <label>24</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <isActive>false</isActive>
                    <label>25</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <isActive>false</isActive>
                    <label>26</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>Product item number</description>
        <label>Product Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalCompanyIndex__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Indexed version of LocalCompany__c</inlineHelpText>
        <label>LocalCompanyIndex</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalCompany__c</fullName>
        <description>Defines the Company for Non-Group products</description>
        <formula>IF ( GroupFlag__c , &apos;&apos;, RIGHT ( FullSegmentsNumber__c , 5 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defines the Company for Non-Group products</inlineHelpText>
        <label>Local Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LockedForIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked for Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PackSize__c</fullName>
        <description>Product pack size</description>
        <label>Pack Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageDescription__c</fullName>
        <description>Product package description</description>
        <label>Package Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrincipalIntegrationId__c</fullName>
        <formula>Principal__r.IntegrationId__c</formula>
        <label>Principal Integration Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrincipalName__c</fullName>
        <formula>Principal__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pricipal of Product</description>
        <label>Principal</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You have to select a valid Global principal.</errorMessage>
            <filterItems>
                <field>Account.TF_RecordTypeDeveloperName__c</field>
                <operation>equals</operation>
                <value>Principal_Global</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductIdCs__c</fullName>
        <formula>Id &amp;
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Id, 5, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Id, 4, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Id, 3, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Id, 2, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Id, 1, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1) &amp; 
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Id, 10, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Id, 9, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Id, 8, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Id, 7, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Id, 6, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1) &amp; 
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Id, 15, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Id, 14, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Id, 13, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Id, 12, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Id, 11, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1)</formula>
        <label>Product Id (Case-safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Product region</description>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportingLine__c</fullName>
        <label>Principal Reporting Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchResult__c</fullName>
        <formula>FullSegmentsNumber__c &amp; &apos; ᛫ &apos; &amp; Principal__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment4__c</fullName>
        <description>Product segment 4</description>
        <label>Segment 4</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierItemNumber__c</fullName>
        <description>Product Supplier Item Number</description>
        <label>Supplier Item Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_ExcludeSegment4__c</fullName>
        <description>SFDP-988 Extra search</description>
        <label>Exclude Segment 4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exclude segment 4</fullName>
                    <default>true</default>
                    <label>Exclude segment 4</label>
                </value>
                <value>
                    <fullName>Only show segment 4</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TF_ProductManagerName__c</fullName>
        <formula>ProductManager__r.FirstName + &apos; &apos; + ProductManager__r.LastName</formula>
        <label>Product Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempProductFlag__c</fullName>
        <description>Is this a Temp product?</description>
        <formula>ISPICKVAL( ItemStatus__c , &apos;02.Temp Pre Sales&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temporary Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TradeName__c</fullName>
        <description>Product trade name</description>
        <label>Trade Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type = Segment 3</description>
        <label>Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <description>to be changed to a Global Valueset (currently available)</description>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KG</fullName>
                    <default>true</default>
                    <label>KG - Kilogram</label>
                </value>
                <value>
                    <fullName>HJ</fullName>
                    <label>HJ - box</label>
                </value>
                <value>
                    <fullName>00</fullName>
                    <label>00 - centimetre</label>
                </value>
                <value>
                    <fullName>M3</fullName>
                    <label>M3 - cubic metre</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>01 - each</label>
                </value>
                <value>
                    <fullName>QA</fullName>
                    <label>QA - feet</label>
                </value>
                <value>
                    <fullName>GL</fullName>
                    <label>GL - US Gallon</label>
                </value>
                <value>
                    <fullName>GM</fullName>
                    <label>GM - Gram</label>
                </value>
                <value>
                    <fullName>LT</fullName>
                    <label>LT - litre</label>
                </value>
                <value>
                    <fullName>M1</fullName>
                    <label>M1 - metre</label>
                </value>
                <value>
                    <fullName>MT</fullName>
                    <label>MT - metric ton</label>
                </value>
                <value>
                    <fullName>LB</fullName>
                    <label>LB - pounds</label>
                </value>
                <value>
                    <fullName>P2</fullName>
                    <label>P2 - roll</label>
                </value>
                <value>
                    <fullName>S7</fullName>
                    <label>S7 - set</label>
                </value>
                <value>
                    <fullName>M2</fullName>
                    <label>M2 - square metre</label>
                </value>
                <value>
                    <fullName>UN</fullName>
                    <label>UN - unit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>PreventNewRecord</fullName>
        <active>true</active>
        <description>Used to override normal CreateNewProduct list button behavior.</description>
        <label>Not Allowed to Create Temp Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <description>Standard product record type</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>TempProduct</fullName>
        <active>true</active>
        <description>Record type for the creation of Temp Products</description>
        <label>Temp Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CannotCreateTempsLinkedToInactivePrincip</fullName>
        <active>true</active>
        <description>Preventing the CREATION of new temporary products linked to inactive Principals (accounts)</description>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True, 
NOT ($Permission.LockedProductBypass ),
ISNEW(),
RecordType.DeveloperName = &apos;TempProduct&apos;,
TEXT( Principal__r.Status__c) = &apos;Not Active&apos; 
)</errorConditionFormula>
        <errorDisplayField>Principal__c</errorDisplayField>
        <errorMessage>Please select an active principal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockedProductReadonly</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c, 
NOT ($Permission.LockedProductBypass ),
LockedForIntegration__c, 
OR ( 
ISCHANGED ( FullSegmentsNumber__c), 
ISCHANGED ( Item__c), 
ISCHANGED ( Name), 
ISCHANGED ( ItemStatus__c), 
ISCHANGED ( PackSize__c), 
ISCHANGED ( Type__c), 
ISCHANGED ( SupplierItemNumber__c), 
ISCHANGED ( PackageDescription__c), 
ISCHANGED ( CountryofOrigin__c), 
ISCHANGED ( TradeName__c), 
ISCHANGED ( CASNumber__c), 
ISCHANGED ( CompanySampleStore__c), 
ISCHANGED ( CentralSampleStore__c), 
ISCHANGED ( AllowedCountries__c), 
ISCHANGED ( Principal__c), 
ISCHANGED ( BgcPlasticsId__c), 
ISCHANGED ( BgcFoodId__c), 
ISCHANGED ( BgcPersonalCareId__c), 
ISCHANGED ( BgcFoodId__c), 
ISCHANGED ( BgcLubricantsId__c), 
ISCHANGED ( BgcSynthesisId__c), 
ISCHANGED ( BgcHomeCareId__c), 
ISCHANGED ( BgcOtherId__c), 
ISCHANGED ( BGCPharmaceuticalsId__c ), 
ISCHANGED ( BgcCoatingsId__c), 
ISCHANGED ( Segment4__c), 
ISCHANGED ( UnitOfMeasure__c),
ISCHANGED ( Comments__c )
) 
)</errorConditionFormula>
        <errorMessage>You&apos;re not allowed to change products in Salesforce.  You can edit this information in the Product Hub or in your local product management tool.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreventNewRecord</fullName>
        <active>true</active>
        <description>Used to prevent users from creating records from the &apos;Recently Viewed&apos; list view. This is done by identifying the special record type &apos;PreventNewRecord&apos;.</description>
        <errorConditionFormula>AND ( 
   $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c
   , RecordTypeName__c = &apos;PreventNewRecord&apos; 
)</errorConditionFormula>
        <errorMessage>You are not allowed to create products from here. Please navigate to a quote and create the product from there.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductNameLengthMax40Chars</fullName>
        <active>true</active>
        <description>Based on OPH rule, Name can only contain 100 chars.</description>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c, 
LEN(Name) &gt; 100 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Data value too large (max length=100)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>itemStatusStateModel</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
	OR ( 
		ISPICKVAL (ItemStatus__c, &apos;02.Temp Pre Sales&apos;),
		ISPICKVAL (ItemStatus__c, &apos;03.Active Pre Sales&apos;)
	),
	OR (
		ISPICKVAL( PRIORVALUE(ItemStatus__c), &apos;04.Active Sales&apos;),
		ISPICKVAL( PRIORVALUE(ItemStatus__c), &apos;05.Phase Out&apos;),
		ISPICKVAL( PRIORVALUE(ItemStatus__c), &apos;07.Obsolete&apos;)
	)
)</errorConditionFormula>
        <errorMessage>It&apos;s not allowed to change a Sales product back to a Temporary product.</errorMessage>
    </validationRules>
</CustomObject>